--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.so
 *.dylib
 
+
 # Test binary, built with `go test -c`
 *.test
 
@@ -20,3 +21,4 @@ go.work.sum
 # env file
 .env
 .DS_Store
+main
